RF08: validar troca de senha e revogar sessões